finished basic operations
